rm overview txt component and use library, mv service to service directory

--- a/applications/cascading-windows/src/app/app.component.html
+++ b/applications/cascading-windows/src/app/app.component.html
@@ -5,7 +5,11 @@
     <md-open-window-button></md-open-window-button>
     <md-cascade-windows-button></md-cascade-windows-button>
   </div>
-  <md-overview-text></md-overview-text>
+  <md-overview-text
+    [points]="points"
+    [subtitle]="subtitle"
+    [title]="title">
+  </md-overview-text>
 </div>
 
 <md-footer></md-footer>
