use lib footer component, rm app specific footer

--- a/applications/modal-windows/src/app/app.component.html
+++ b/applications/modal-windows/src/app/app.component.html
@@ -11,5 +11,5 @@
         (handleWindowClose)="close()">
     </md-modal-window>
 </div>
-<md-footer></md-footer>
+<md-footer [sourceCodeRepo]="footerHref"></md-footer>
 <div class="k-overlay no-click" *ngIf="opened"></div>
