replace navbar with shared header component

--- a/applications/modal-windows/src/app/app.component.html
+++ b/applications/modal-windows/src/app/app.component.html
@@ -1,4 +1,4 @@
-<md-nav-bar></md-nav-bar>
+<md-header></md-header>
 <div class="example-wrapper">
     <button class="window-button" kendoButton (click)="open()">Open Window Button</button>
     <md-overview-text
