update package, run linter, fix tests, change prefix to mdak

--- a/applications/cascading-windows/src/app/app.component.html
+++ b/applications/cascading-windows/src/app/app.component.html
@@ -2,8 +2,8 @@
 
 <div class="example-wrapper">
   <div class="button-container">
-    <md-open-window-button></md-open-window-button>
-    <md-cascade-windows-button></md-cascade-windows-button>
+    <mdak-open-window-button></mdak-open-window-button>
+    <mdak-cascade-windows-button></mdak-cascade-windows-button>
   </div>
   <md-overview-text
     [points]="points"
