--- a/applications/cascading-windows/src/app/components/windows/window-buttons/cascade-windows-button/cascade-windows-button.component.html
+++ b/applications/cascading-windows/src/app/components/windows/window-buttons/cascade-windows-button/cascade-windows-button.component.html
@@ -1,1 +1,7 @@
-<button kendoButton class="window-button cascade-windows-button" [disabled]="!isEnabled" (click)="handleButtonClick()">Cascade Windows</button>
+<button kendoButton
+  class="window-button cascade-windows-button"
+  [disabled]="!isEnabled"
+  (click)="handleButtonClick()"
+>
+  Cascade Windows
+</button>
