--- a/applications/cascading-windows/src/app/components/windows/window-buttons/open-window-button/open-window-button.component.html
+++ b/applications/cascading-windows/src/app/components/windows/window-buttons/open-window-button/open-window-button.component.html
@@ -1,3 +1,5 @@
-<button kendoButton class="window-button open-window-button" (click)="handleButtonClick()">Open Window</button>
+<button kendoButton class="window-button open-window-button" (click)="handleButtonClick()">
+  Open Window
+</button>
 
 <div kendoWindowContainer></div>
