update packages remove cdn styling, add typedefs, update project prefix

--- a/applications/modal-windows/src/app/app.component.html
+++ b/applications/modal-windows/src/app/app.component.html
@@ -6,10 +6,10 @@
         [subtitle]="overviewSubtitle"
         [title]="overviewTitle">
     </md-overview-text>
-    <md-modal-window *ngIf="opened"
+    <mdak-modal-window *ngIf="opened"
         [isOpen]="opened"
         (handleWindowClose)="close()">
-    </md-modal-window>
+    </mdak-modal-window>
 </div>
 <md-footer [sourceCodeRepo]="footerHref"></md-footer>
 <div class="k-overlay no-click" *ngIf="opened"></div>
