initial scope naming update

--- a/applications/cascading-windows/src/app/app.component.html
+++ b/applications/cascading-windows/src/app/app.component.html
@@ -2,8 +2,8 @@
 
 <div class="example-wrapper">
   <div class="button-container">
-    <mdak-open-window-button></mdak-open-window-button>
-    <mdak-cascade-windows-button></mdak-cascade-windows-button>
+    <nssd-open-window-button></nssd-open-window-button>
+    <nssd-cascade-windows-button></nssd-cascade-windows-button>
   </div>
   <md-overview-text
     [points]="points"
