--- a/applications/modal-windows/src/app/app.component.scss
+++ b/applications/modal-windows/src/app/app.component.scss
@@ -12,13 +12,13 @@ body {
     margin: 0;
 }
 
-mdak-root {
+nssd-root {
     display: block;
     box-sizing: border-box;
     padding: 30px;
 }
 
-mdak-root>.k-icon.k-i-loading {
+nssd-root>.k-icon.k-i-loading {
     font-size: 64px;
     position: absolute;
     top: 50%;
