--- a/applications/date-picker-test/src/app/app.component.html
+++ b/applications/date-picker-test/src/app/app.component.html
@@ -3,10 +3,10 @@
 <div class="content">
   <h1 *ngIf="title" class="jumbotron">{{title}}</h1>
 
-  <mdak-date-picker
+  <nssd-date-picker
     [date]="date"
     (onValueChange)="handleDateChange($event)">
-  </mdak-date-picker>
+  </nssd-date-picker>
 
   <div class="date-display">
     <span class="date-title">Current Date: </span>
