set selectors to match libraries

--- a/applications/cascading-windows/src/app/app.component.html
+++ b/applications/cascading-windows/src/app/app.component.html
@@ -1,15 +1,15 @@
-<md-header></md-header>
+<nssd-header></md-header>
 
 <div class="example-wrapper">
   <div class="button-container">
     <nssd-open-window-button></nssd-open-window-button>
     <nssd-cascade-windows-button></nssd-cascade-windows-button>
   </div>
-  <md-overview-text
+  <nssd-overview-text
     [points]="points"
     [subtitle]="subtitle"
     [title]="title">
   </md-overview-text>
 </div>
 
-<md-footer [sourceCodeRepo]="footerHref"></md-footer>
+<nssd-footer [sourceCodeRepo]="footerHref"></md-footer>
