--- a/applications/date-picker-test/src/app/app.component.html
+++ b/applications/date-picker-test/src/app/app.component.html
@@ -1,4 +1,4 @@
-<md-header></md-header>
+<nssd-header></md-header>
 
 <div class="content">
   <h1 *ngIf="title" class="jumbotron">{{title}}</h1>
@@ -13,5 +13,5 @@
     <span *ngIf="date">{{date}}</span>
   </div>
 
-  <md-footer [sourceCodeRepo]="footerHref"></md-footer>
+  <nssd-footer [sourceCodeRepo]="footerHref"></md-footer>
 </div>
