update end selectors

--- a/applications/cascading-windows/src/app/app.component.html
+++ b/applications/cascading-windows/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nssd-header></md-header>
+<nssd-header></nssd-header>
 
 <div class="example-wrapper">
   <div class="button-container">
@@ -9,7 +9,7 @@
     [points]="points"
     [subtitle]="subtitle"
     [title]="title">
-  </md-overview-text>
+  </nssd-overview-text>
 </div>
 
-<nssd-footer [sourceCodeRepo]="footerHref"></md-footer>
+<nssd-footer [sourceCodeRepo]="footerHref"></nssd-footer>
