--- a/applications/modal-windows/src/app/app.component.html
+++ b/applications/modal-windows/src/app/app.component.html
@@ -1,15 +1,15 @@
-<nssd-header></md-header>
+<nssd-header></nssd-header>
 <div class="example-wrapper">
     <button class="window-button" kendoButton (click)="open()">Open Window Button</button>
     <nssd-overview-text
         [points]="overviewPoints"
         [subtitle]="overviewSubtitle"
         [title]="overviewTitle">
-    </md-overview-text>
+    </nssd-overview-text>
     <nssd-modal-window *ngIf="opened"
         [isOpen]="opened"
         (handleWindowClose)="close()">
     </nssd-modal-window>
 </div>
-<nssd-footer [sourceCodeRepo]="footerHref"></md-footer>
+<nssd-footer [sourceCodeRepo]="footerHref"></nssd-footer>
 <div class="k-overlay no-click" *ngIf="opened"></div>
