rm shared components from apps

--- a/applications/cascading-windows/src/app/app.component.html
+++ b/applications/cascading-windows/src/app/app.component.html
@@ -1,15 +1,15 @@
-<nssd-header></nssd-header>
+<!-- <nssd-header></nssd-header> -->
 
 <div class="example-wrapper">
   <div class="button-container">
     <nssd-open-window-button></nssd-open-window-button>
     <nssd-cascade-windows-button></nssd-cascade-windows-button>
   </div>
-  <nssd-overview-text
+  <!-- <nssd-overview-text
     [points]="points"
     [subtitle]="subtitle"
     [title]="title">
-  </nssd-overview-text>
+  </nssd-overview-text> -->
 </div>
 
-<nssd-footer [sourceCodeRepo]="footerHref"></nssd-footer>
+<!-- <nssd-footer [sourceCodeRepo]="footerHref"></nssd-footer> -->
