add window wrapper and correct styling

--- a/applications/modal-windows/src/app/modal-window/modal-window.component.html
+++ b/applications/modal-windows/src/app/modal-window/modal-window.component.html
@@ -1,23 +1,24 @@
-<kendo-window *ngIf="isOpen"
-    class="{{isChildOpen ? NO_CLICK_CLASS : ''}}"
-    [height]="height"
-    [minHeight]="minHeight"
-    [minWidth]="minWidth"
-    [style]="isChildOpen ? 'z-index: 1000;' : ''"
-    [title]="displayTitle"
-    [width]="width"
-    (close)="closeWindow()"
->
-    <button type="button" class="k-button open-child-button" (click)="openChildWindow()">Open Child</button>
-    <button type="button" class="k-button" (click)="closeWindow()">Close</button>
-</kendo-window>
-<nssd-modal-window *ngIf="isChildOpen"
-    title="Child Window"
-    [height]="height * (4/5)"
-    [isOpen]="isChildOpen"
-    [windowCount]="windowCount + 1"
-    [minHeight]="minHeight * (4/5)"
-    [minWidth]="minWidth * (4/5)"
-    [width]="width * (4/5)"
-    (handleWindowClose)="closeChildWindow()">
-</nssd-modal-window>
+<div class="window-container">
+  <kendo-window *ngIf="isOpen"
+      class="{{isChildOpen ? BEHIND_OVERLAY_CLASS + ' ' + NO_CLICK_CLASS : ''}}"
+      [height]="height"
+      [minHeight]="minHeight"
+      [minWidth]="minWidth"
+      [title]="displayTitle"
+      [width]="width"
+      (close)="closeWindow()"
+  >
+      <button type="button" class="k-button open-child-button" (click)="openChildWindow()">Open Child</button>
+      <button type="button" class="k-button" (click)="closeWindow()">Close</button>
+  </kendo-window>
+  <nssd-modal-window *ngIf="isChildOpen"
+      title="Child Window"
+      [height]="height * (4/5)"
+      [isOpen]="isChildOpen"
+      [windowCount]="windowCount + 1"
+      [minHeight]="minHeight * (4/5)"
+      [minWidth]="minWidth * (4/5)"
+      [width]="width * (4/5)"
+      (handleWindowClose)="closeChildWindow()">
+  </nssd-modal-window>
+</div>
