--- a/applications/random-app/src/app/app.component.html
+++ b/applications/random-app/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>{{!!title ? 'My title ' + title : 'Missing Title'}}</h1>
 
-<nssd-kendo-tab-strip></md-tutorial-kendo-tab-strip>
+<nssd-kendo-tab-strip></nssd-kendo-tab-strip>
 
-<nssd-clouds-footer></md-tutorial-clouds-footer>
+<nssd-clouds-footer></nssd-clouds-footer>
