--- a/applications/random-app/src/app/components/kendo/kendo-tab-strip/kendo-tab-strip.component.html
+++ b/applications/random-app/src/app/components/kendo/kendo-tab-strip/kendo-tab-strip.component.html
@@ -8,13 +8,13 @@
   </kendo-tabstrip-tab>
   <kendo-tabstrip-tab [title]="tabTwoTitle">
     <ng-template kendoTabContent>
-      <nssd-kendo-tree-view></md-tutorial-kendo-tree-view>
+      <nssd-kendo-tree-view></nssd-kendo-tree-view>
     </ng-template>
   </kendo-tabstrip-tab>
   <kendo-tabstrip-tab [title]="tabThreeTitle" [disabled]="!isTabEnabled"></kendo-tabstrip-tab>
   <kendo-tabstrip-tab [title]="tabFourTitle">
     <ng-template kendoTabContent>
-      <nssd-kendo-splitter></md-tutorial-kendo-splitter>
+      <nssd-kendo-splitter></nssd-kendo-splitter>
     </ng-template>
   </kendo-tabstrip-tab>
 </kendo-tabstrip>
