--- a/applications/random-app/src/app/components/kendo/kendo-splitter/kendo-splitter.component.html
+++ b/applications/random-app/src/app/components/kendo/kendo-splitter/kendo-splitter.component.html
@@ -2,12 +2,12 @@
 
 <kendo-splitter orientation="horizontal" style="height: 140px;">
   <kendo-splitter-pane max="250px" size="250px" style="overflow-y: hidden;">
-    <nssd-box-list></md-tutorial-box-list>
+    <nssd-box-list></nssd-box-list>
   </kendo-splitter-pane>
   <kendo-splitter-pane>
-    <nssd-kendo-grid></md-tutorial-kendo-grid>
+    <nssd-kendo-grid></nssd-kendo-grid>
   </kendo-splitter-pane>
   <kendo-splitter-pane size="500px">
-    <nssd-styled-table></md-tutorial-styled-table>
+    <nssd-styled-table></nssd-styled-table>
   </kendo-splitter-pane>
 </kendo-splitter>
