add editable grid comp

--- a/applications/collections/src/app/components/kendo/kendo-tab-strip/kendo-tab-strip.component.html
+++ b/applications/collections/src/app/components/kendo/kendo-tab-strip/kendo-tab-strip.component.html
@@ -34,3 +34,7 @@
     (valueChange)="handleEvent($event, 'value')">
   </kendo-dropdownlist>
 </div>
+
+<div style="margin-top: 24px;">
+  <nssd-kendo-edit-grid></nssd-kendo-edit-grid>
+</div>
